--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "private": true,
   "scripts": {
-    "start": "node ./server.js"
+    "start": "node ./server.js",
+    "start-dev": "nodemon ./server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
     "yup": "^1.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
